--- a/inventory.ini
+++ b/inventory.ini
@@ -1,15 +1,15 @@
 [all_servers]
 10.101.151.[181:190]
 
-[software-1]
+[software_1]
 10.101.151.181
 10.101.151.182
 
-[software-2]
+[software_2]
 10.101.151.183
 10.101.151.184
 
-[software-3]
+[software_3]
 10.101.151.185
 10.101.151.186
 
