add nome do grupo

--- a/playbooks/cria_utilizadores.yml
+++ b/playbooks/cria_utilizadores.yml
@@ -1,3 +1,5 @@
+# Grupo 4: Bruna Dutra, Marina Gregorini, Marta Martins e Tiago Silva
+
 - name: Cria utilizadores a partir de utilizadores.yml
   hosts: all_servers
   become: true
