--- a/playbooks/supermercado.yml
+++ b/playbooks/supermercado.yml
@@ -1,3 +1,5 @@
+# Grupo 4: Bruna Dutra, Marina Gregorini, Marta Martins e Tiago Silva
+
 - name: Supermercado Boa Sorte
   hosts: app_supermercado
   become: true
