edições no readme com comandos para testes e paths nos playbooks

--- a/playbooks/instala_pacotes.yml
+++ b/playbooks/instala_pacotes.yml
@@ -5,7 +5,7 @@
   become: true
   gather_facts: true
   vars_files:
-    - VARS/pacotes.yml
+    - ../VARS/pacotes.yml
 
   tasks:
     - name: Atualizar repositórios do Alpine
