--- a/playbooks/cria_utilizadores.yml
+++ b/playbooks/cria_utilizadores.yml
@@ -5,7 +5,7 @@
   become: true
   gather_facts: true
   vars_files:
-    - VARS/utilizadores.yml
+    - ../VARS/utilizadores.yml
 
   tasks:
 
@@ -30,6 +30,6 @@
       ansible.builtin.user:
         name: "{{ item.name }}"
         groups: "{{ 'sudo' if item.admin else omit }}"
-        password: "{{ '!' }}"
+        password_expire_max: 0
         state: present
       loop: "{{ users }}"
